# oop

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  qthomework.pro  qthomework.pro.user.4572df3
doc/: .~2024大作业自评表.xlsx  2022010251_王田杨.docx  2024大作业自评表.xlsx  readme.md
src/: MyGame.cpp  MyGame.h  main.cpp
src/Items/: Item.cpp  Item.h  platform.cpp  platform.h
src/Items/Armors/: Armor.cpp  Armor.h  FlamebreakerArmor.cpp  OldShirt.cpp  OldShirt.h  elecbreakerarmor.cpp  elecbreakerarmor.h  icebreakerarmor.cpp  icebreakerarmor.h
src/Items/Arrow/: arrow.cpp  arrow.h  elec_arrow.cpp  elec_arrow.h  flame_arrow.cpp  flame_arrow.h  ice_arrow.cpp  ice_arrow.h
src/Items/Bow/: bow.cpp  bow.h  lone_ice_metal.cpp  lone_ice_metal.h  middle_elec_metal.cpp  middle_elec_metal.h  short_flame_wooden_bow.cpp  short_flame_wooden_bow.h
src/Items/Characters/: Character.cpp  Character.h  Link.cpp  Link.h  conf.h
src/Items/HeadEquipments/: CapOfTheHero.cpp  CapOfTheHero.h  HeadEquipment.cpp  HeadEquipment.h  elecbreakerhead.cpp  elecbreakerhead.h  flamebreakerhead.cpp  flamebreakerhead.h  icebreakerhead.cpp  icebreakerhead.h
src/Items/LegEquipments/: LegEquipment.cpp  LegEquipment.h  WellWornTrousers.cpp  WellWornTrousers.h  elecbreakertrou.cpp  elecbreakertrou.h  flamebreakertrou.cpp  flamebreakertrou.h  icebreakertrou.cpp  icebreakertrou.h
src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h
src/Items/Sword/: double_ice_metal.cpp  double_ice_metal.h  long_elec_metal.cpp  long_elec_metal.h  short_flame_wooden.cpp  short_flame_wooden.h  sword.cpp  sword.h
src/Scenes/: BattleScene.cpp  BattleScene.h  GameOverScene.cpp  GameOverScene.h  HelpScene.cpp  HelpScene.h  Scene.cpp  Scene.h  StartScene.cpp  StartScene.h  cheatline.cpp  cheatline.h  fireplat.cpp  fireplat.h  iceplat.cpp  iceplat.h  rockplat.cpp  rockplat.h  woodplat.cpp
src/assets/: assets.qrc
src/assets/Items/Maps/HelpScene/: HelpScene 拷贝.psd  HelpScene.psd
